--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -335,7 +335,7 @@ jobs:
     
   smoke-test:
     docker:
-      - image: python:3.7-alpine3.11 
+      - image: python:3.11-rc-alpine 
 
     steps:
       - checkout
