--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -357,6 +357,7 @@ jobs:
             cat ./.circleci/ansible/inventory
             BACKEND_IP=$(echo "$BACKEND_IP" | tr -d '[:space:]')
             export API_URL="http://${BACKEND_IP}:3030"
+            echo "API_URL = ${API_URL}"
             if curl "${API_URL}/api/status" | grep "ok"
             then
               return 0
