--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -51,8 +51,9 @@
     npm install
     pm2 stop default
     pm2 start npm -- start  
+    pm2 start npm -- run "start:dev"
 
 - name: "Configure pm2 to start as service"
   shell: |
-    sudo su -c "env PATH=$PATH:/usr/local/bin pm2 startup systemd -u ubuntu --hp /home/ubuntu"
+    sudo su -c "env PATH=$PATH:/usr/local/bin pm2 startup systemd -u ubuntu --hp /home/ubuntu/backend"
     pm2 save
