--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -51,8 +51,10 @@
     npm install
     pm2 stop default
     pm2 start npm -- start  
-    pm2 start npm -- run "start:dev"
-
+    pm2 start npm -- run start --cwd /home/ubuntu/backend
+  args:
+    chdir: /home/ubuntu/backend
+    
 - name: "Configure pm2 to start as service"
   shell: |
     sudo su -c "env PATH=$PATH:/usr/local/bin pm2 startup systemd -u ubuntu --hp /home/ubuntu/backend"
