--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -48,9 +48,9 @@
 - name: "Executing Node app with PM2" 
   shell: |
     cd /home/ubuntu/backend
-    npm install
     pm2 stop default  
-    pm2 start npm -- run start --cwd /home/ubuntu/backend
+    pm2 start --name "my-app" --cwd /home/ubuntu/backend --interpreter=none npm -- start
+
   args:
     chdir: /home/ubuntu/backend
 
