--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -48,11 +48,10 @@
 - name: "Executing Node app with PM2" 
   shell: |
     cd /home/ubuntu/backend
-    pm2 stop default  
-    pm2 start --name "my-app" --cwd /home/ubuntu/backend --interpreter=none npm -- start
+    npm install  
+    npm run build
+    pm2 start npm --name backend -- start
 
-  args:
-    chdir: /home/ubuntu/backend
 
 - name: "Configure pm2 to start as service"
   shell: |
