--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,31 @@ commands:
           name: Destroy environments
           when: on_fail
           command: |
+            aws s3 rm s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
             aws cloudformation delete-stack --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}"
             aws cloudformation delete-stack --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}"
+
+  revert_migrations:
+    description: Revert the last migration if successfully run in the current workflow.
+    parameters:
+      workflow_id:
+        type: string
+        default: ${CIRCLE_WORKFLOW_ID:0:7}
+    steps:
+      - run:
+          name: Revert migrations
+          when: on_fail
+          command: |
+            SUCCESS=$(curl --insecure https://kvdb.io/UafN7LHaBAQ7N5bNtXHfbj/migration_${CIRCLE_WORKFLOW_ID:0:7})
+            
+            if (( $SUCCESS == 1 ));
+            then
+             cd ~/project/backend
+             npm install
+             npm run migrations:revert
+            else
+                echo "No migrations to revert"
+            fi          
 
   ensure-backend-env-exists:
     description: Add .env file due to connection problems
@@ -162,6 +185,8 @@ jobs:
       - destroy-environment:
           id: ${CIRCLE_WORKFLOW_ID:0:7}
           when: on_fail  
+
+      - revert_migrations      
         
   configure-infrastructure:
     docker:
@@ -192,6 +217,8 @@ jobs:
       - destroy-environment:
           id: ${CIRCLE_WORKFLOW_ID:0:7}
           when: on_fail    
+
+      - revert_migrations    
 
 
   run-migrations:
@@ -277,7 +304,9 @@ jobs:
 
       - destroy-environment:
           id: ${CIRCLE_WORKFLOW_ID:0:7}
-          when: on_fail         
+          when: on_fail   
+      - revert-migrations
+
 
   deploy-backend:
     docker:
@@ -332,7 +361,9 @@ jobs:
 
       - destroy-environment:
           id: ${CIRCLE_WORKFLOW_ID:0:7}
-          when: on_fail            
+          when: on_fail        
+
+      - revert_migrations        
     
   smoke-test:
     docker:
@@ -372,12 +403,16 @@ jobs:
              echo ${URL} 
              if curl -s ${URL} | grep "Welcome"
              then
-                 return 0
+                 return 1
              else
                  return 1
              fi      
      
-      
+      - destroy-environment:
+          id: ${CIRCLE_WORKFLOW_ID:0:7}
+          when: on_fail        
+          
+      - revert_migrations 
                                        
 workflows:
   default:
