--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,9 +28,9 @@ commands:
           name: Revert migrations
           when: on_fail
           command: |
-            SUCCESS=$(curl --insecure https://kvdb.io/UafN7LHaBAQ7N5bNtXHfbj/migration_${CIRCLE_WORKFLOW_ID:0:7})
+            SUCCESS=$(curl --insecure https://kvdb.io/UafN7LHaBAQ7N5bNtXHfbj/migration_<< parameters.workflow_id >>)
             echo $SUCCESS
-            if (( $SUCCESS == 1 ));
+            if (( $SUCCESS == 1 ))
             then
              cd ~/project/backend
              npm install
@@ -410,7 +410,9 @@ jobs:
              else
                  return 1
              fi      
-           
+      - destroy-environment:
+          id: ${CIRCLE_WORKFLOW_ID:0:7}
+          when: on_fail        
           
       - revert_migrations 
                                        
