--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -406,7 +406,7 @@ jobs:
           id: ${CIRCLE_WORKFLOW_ID:0:7}
           when: on_fail        
           
-      - revert-migrations:
+      - revert_migrations:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}" 
 
   cloudfront-update:
