--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -398,7 +398,7 @@ jobs:
              echo ${URL} 
              if curl -s ${URL} | grep "Welcome"
              then
-                 return 1
+                 return 0
              else
                  return 1
              fi      
@@ -477,7 +477,9 @@ workflows:
       - deploy-backend:
           requires: [run-migrations]  
       - smoke-test:
-          requires: [deploy-backend, deploy-frontend]      
+          requires: [deploy-backend, deploy-frontend]    
+      - cloudfront-update:
+          requires: [smoke-test]      
       
       
              
