--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -449,6 +449,34 @@ jobs:
           when: on_fail
 
       - revert_migrations  
+  cleanup:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            yum -y install jq tar gzip git curl
+      - run:
+          name: Get old stack workflow id and Remove old stacks and files
+          command: |
+            export OldWorkflowID=$(aws cloudformation list-exports --query "Exports[?Name==\`WorkflowID\`].Value" --no-paginate --output text)
+            echo OldWorkflowID: "${OldWorkflowID}"
+            echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"   
+            export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
+            echo Stack names: "${STACKS[@]}"
+            if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
+            then
+              echo 'Cleaning bucket and stacks: '
+              aws s3 rm s3://${OldWorkflowID} --recursive
+              aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID: -7}"
+              aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID: -7}"
+              echo 'Cleaned'
+            else
+              echo '***** Cannot remove *****'
+            fi
+    
                                        
 workflows:
   default:
@@ -479,7 +507,9 @@ workflows:
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]    
       - cloudfront-update:
-          requires: [smoke-test]      
+          requires: [smoke-test]  
+       - cleanup:
+          requires: [cloudfront-update]        
       
       
              
