--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -128,3 +128,16 @@ jobs:
           command: |
             cd backend
             npm audit fix --audit-level=critical --force
+workflows:
+  default:
+    jobs:
+      - build-frontend
+      - build-backend
+      - test-frontend:
+          requires: [build-frontend]
+      - test-backend:
+          requires: [build-backend]
+      - scan-backend:
+          requires: [build-backend]
+      - scan-frontend:
+          requires: [build-frontend]            
