--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -325,6 +325,7 @@ jobs:
             echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> "backend/.env"
             echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> "backend/.env"
             echo TYPEORM_MIGRATIONS_DIR=$TYPEORM_MIGRATIONS_DIR >> "backend/.env"
+            echo NODE_ENV=production >> "backend/.env"
             apk add --update ansible curl rsync openssh nodejs npm
             ansible --version
             pip install --upgrade pip
