--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -288,13 +288,14 @@ jobs:
             mkdir -p frontend
             echo NODE_ENV=production >> "frontend/.env"
             echo "API_URL=${API_URL}" >> "frontend/.env"
+            $ export API_URL = ${API_URL}
 
             cd frontend
             npm install
             npm run build
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
 
-            aws s3 cp ./artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7}"
+            aws s3 cp ./dist "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7}" --recursive 
 
             echo "Deployed objects path: $(pwd)/dist" 
 
