--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -219,6 +219,8 @@ jobs:
       - image: circleci/node:14.17.6
     steps:
       - checkout
+      - attach_workspace:
+          at: ~/
       
       - run:
           name: Run migrations
@@ -226,15 +228,19 @@ jobs:
             cd backend
             npm install
             npm run migrations > migrations_log.txt 2>&1
-            echo 'has been executed successfully.' >> migrations_log.txt
+            cat migrations_log.txt
       - run:
           name: Send migration status to kvdb.io
           command: |
-              if grep -q "has been executed successfully." ~/project/backend/migrations_log.txt
+              cd backend
+              cat migrations_log.txt
+              if grep -q "has been executed successfully." migrations_log.txt
               then
-                echo "insecure" >> ~/.curlrc
-                curl https://kvdb.io/UafN7LHaBAQ7N5bNtXHfbj/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+                curl https://kvdb.io/4Cyqr1aCzbMHdLwfuucWPZ/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+              else
+              echo "Not executed successfully"  
               fi  
+              
 
   check-workspace-content:
     docker:
