--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -215,31 +215,39 @@ jobs:
 
   run-migrations:
     docker:
-      # Select proper image
       - image: circleci/node:14.17.6
     steps:
       - checkout
-      - attach_workspace:
-          at: ~/
-      
+      - restore_cache:
+          keys: [backend-build]
+
       - run:
-          name: Run migrations
+          name: Setup Backend
           command: |
             cd backend
             npm install
+            npm run build
+
+      - run:
+          name: Run Migrations
+          command: |
+            cd backend
             npm run migrations > migrations_log.txt 2>&1
             cat migrations_log.txt
+
       - run:
-          name: Send migration status to kvdb.io
+          name: Check Migration Status
           command: |
-              cd backend
-              cat migrations_log.txt
-              if grep -q "has been executed successfully." migrations_log.txt
-              then
-                curl https://kvdb.io/4Cyqr1aCzbMHdLwfuucWPZ/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
-              else
-              echo "Not executed successfully"  
-              fi  
+            cd backend
+            if grep -q "has been executed successfully." migrations_log.txt
+            then
+              echo "Migration executed successfully"
+              curl https://kvdb.io/73XjYmbSCn4KC7mtUmcXQv/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+            else
+              echo "Migration did not execute successfully"
+              # Add steps for handling unsuccessful migration here
+            fi
+  
               
 
   check-workspace-content:
@@ -261,6 +269,8 @@ jobs:
 
     steps:
       - checkout
+      - restore_cache:
+          keys: [backend-build]
       - attach_workspace:
           at: .
       - run:
