--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -238,11 +238,10 @@ jobs:
       - run:
           name: Check Migration Status
           command: |
-            cd backend
-            if grep -q "has been executed successfully." migrations_log.txt
+            if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
               echo "Migration executed successfully"
-              curl https://kvdb.io/UafN7LHaBAQ7N5bNtXHfbj/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+              curl https://kvdb.io/XxBcBNhfFbtVNeqcJ6byw5/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             else
               echo "Migration did not execute successfully"
             
