--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -215,37 +215,33 @@ jobs:
 
   run-migrations:
     docker:
+      # Select proper image
       - image: circleci/node:14.17.6
     steps:
       - checkout
       - restore_cache:
           keys: [backend-build]
-
+      - attach_workspace:
+          at: ~/
+      
       - run:
-          name: Setup Backend
+          name: Run migrations
           command: |
             cd backend
             npm install
-            npm run build
-
-      - run:
-          name: Run Migrations
-          command: |
-            cd backend
             npm run migrations > migrations_log.txt 2>&1
             cat migrations_log.txt
-
       - run:
-          name: Check Migration Status
+          name: Send migration status to kvdb.io
           command: |
-            if grep -q "has been executed successfully." ~/project/backend/migrations_log.txt
-            then
-              echo "Migration executed successfully"
-              curl https://kvdb.io/XxBcBNhfFbtVNeqcJ6byw5/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
-            else
-              echo "Migration did not execute successfully"
-            
-            fi
+              cd backend
+              cat migrations_log.txt
+              if grep -q "has been executed successfully." migrations_log.txt
+              then
+                curl https://kvdb.io/4Cyqr1aCzbMHdLwfuucWPZ/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+              else
+              echo "Not executed successfully"  
+              fi
   
               
 
@@ -509,14 +505,7 @@ workflows:
           requires: [deploy-infrastructure]  
       - run-migrations:
           requires: [configure-infrastructure]
-      - deploy-frontend:
-          requires: [run-migrations]  
-      - deploy-backend:
-          requires: [run-migrations]  
-      - smoke-test:
-          requires: [deploy-backend, deploy-frontend]    
-      - cloudfront-update:
-          requires: [smoke-test]  
+        
            
       
       
