--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -229,7 +229,7 @@ jobs:
           command: |
             cd backend
             npm install
-            npm run migrations > migrations_log.txt 2>&1
+            npm run migrations > migrations_log.txt 
             cat migrations_log.txt
       - run:
           name: Send migration status to kvdb.io
