--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -216,32 +216,35 @@ jobs:
 
   run-migrations:
     docker:
-      # Select proper image
+      # Docker image here that supports NodeJS
       - image: circleci/node:13.8.0
     steps:
       - checkout
+      - run:
+          name: Install dependencies
+          command: |
+              sudo apt install -y tar gzip curl
+              curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+              unzip -qq awscliv2.zip
+              sudo ./aws/install
       - restore_cache:
           keys: [backend-build]
-      - attach_workspace:
-          at: ~/
-      
       - run:
           name: Run migrations
           command: |
-            cd backend
-            npm install
-            npm run migrations > migrations_log.txt 
-            cat migrations_log.txt
-            
+              cd backend/src
+              npm run migrations >> migrations.txt
+              cat migrations.txt
       - run:
-          name: Send migration status to kvdb.io
+          name: Send migration results to kvdb
           command: |
-              cd backend
-              cat migrations_log.txt
-              if grep -q "has been executed successfully." migrations_log.txt
+              if grep -q "SELECT" ~/project/backend/src/migrations.txt
               then
-                curl https://kvdb.io/4Cyqr1aCzbMHdLwfuucWPZ/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+                  curl --insecure https://kvdb.io/4Cyqr1aCzbMHdLwfuucWPZ/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
               fi
+     # Here's where you will add some code to rollback on failure  
+      - destroy-environment    
+      - revert-migrations    
   
               
 
@@ -414,7 +417,7 @@ jobs:
              echo ${URL} 
              if curl -s ${URL} | grep "Welcome"
              then
-                 return 1
+                 return 0
              else
                  return 1
              fi      
