--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -243,8 +243,8 @@ jobs:
                   curl --insecure https://kvdb.io/4Cyqr1aCzbMHdLwfuucWPZ/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
               fi
      # Here's where you will add some code to rollback on failure  
-      - destroy-environment    
-      - revert-migrations    
+      - destroy_environment    
+      - revert_migrations    
   
               
 
