--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -242,9 +242,12 @@ jobs:
               then
                   curl --insecure https://kvdb.io/4Cyqr1aCzbMHdLwfuucWPZ/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
               fi
-     # Here's where you will add some code to rollback on failure  
-      - destroy_environment    
-      - revert_migrations    
+
+      - destroy-environment:
+          id: ${CIRCLE_WORKFLOW_ID:0:7}
+          when: on_fail    
+
+      - revert_migrations 
   
               
 
